Fix nav dropdown on mobile

--- a/assets/css/ui.scss
+++ b/assets/css/ui.scss
@@ -20,3 +20,8 @@ body.experimental-ui {
     margin-top: 110px;
   }
 }
+
+.navbar-collapse {
+  background: #5eeb8f;
+  padding: 10px;
+}
